Fixed Progress Centering on Mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,6 @@
 @media (max-width: 600px) {
 
     .height-minus-header {
-        height: calc(100% - 56px);
+        height: calc(100vh - 56px);
     }
 }
